[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://NewGame.gd" type="Script" id=3]
[ext_resource path="res://climax-game-jam/TitleScreen/FadeIn.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/titile.png" type="Texture" id=5]

[sub_resource type="BitmapFont" id=1]
height = 2.0

[sub_resource type="DynamicFont" id=2]
size = 50
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[node name="creditsScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.03046
margin_top = 18.056
margin_right = 6.03052
margin_bottom = 18.056
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1040.0
margin_bottom = 560.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 1040.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 41
alignment = 1

[node name="backButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 250.0
margin_right = 1040.0
margin_bottom = 310.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "cleck here to go back"
flat = true
align = 0

[node name="FadeIn" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Label" type="Label" parent="."]
margin_left = -338.684
margin_top = 51.9935
margin_right = 1629.32
margin_bottom = 729.993
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
text = "Credits

Click to here go back"
align = 1

[node name="Sprite3" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 606.128, 336.738 )
scale = Vector2( 1.01565, 0.990199 )
texture = ExtResource( 5 )

[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/backButton" to="." method="_on_backButton_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
