[gd_scene load_steps=4 format=2]

[ext_resource path="res://art/Homescreen/titile.png" type="Texture" id=1]
[ext_resource path="res://NewGame.gd" type="Script" id=3]
[ext_resource path="res://climax-game-jam/test/FadeIn.tscn" type="PackedScene" id=4]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -18.0
margin_top = 45.0
margin_right = -18.0
margin_bottom = 45.0
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1040.0
margin_bottom = 560.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 1040.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 76
alignment = 1

[node name="StartGameButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 1040.0
margin_bottom = 170.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3
flat = true
align = 0

[node name="creditsButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
anchor_top = 0.0482143
anchor_bottom = 0.0482143
margin_top = 318.0
margin_right = 1040.0
margin_bottom = 378.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3
flat = true
align = 0

[node name="FadeIn" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Sprite" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 654, 316 )
scale = Vector2( 0.66276, 0.663166 )
texture = ExtResource( 1 )

[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/creditsButton" to="." method="_on_creditsButton_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
