[gd_scene load_steps=7 format=2]

[ext_resource path="res://art/Homescreen/Play-4.png" type="Texture" id=1]
[ext_resource path="res://fonts/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://NewGame.gd" type="Script" id=3]
[ext_resource path="res://climax-game-jam/test/FadeIn.tscn" type="PackedScene" id=4]

[sub_resource type="BitmapFont" id=1]
height = 2.0

[sub_resource type="DynamicFont" id=2]
size = 50
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[node name="creditsScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.03046
margin_top = 18.056
margin_right = 6.03052
margin_bottom = 18.056
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1040.0
margin_bottom = 560.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 1040.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 41
alignment = 1

[node name="trans2Button" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 250.0
margin_right = 1040.0
margin_bottom = 310.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "cleck here to go back"
flat = true
align = 0

[node name="FadeIn" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Label" type="Label" parent="."]
margin_left = -338.684
margin_top = 51.9935
margin_right = 1629.32
margin_bottom = 729.993
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
text = "\"Thats one demon down!
Im gonna keep on hunting until I find the one
responsible!\"

Click to here go get them!"
align = 1

[node name="Sprite3" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 626.97, 328.944 )
scale = Vector2( 0.663003, 0.655073 )
texture = ExtResource( 1 )

[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/trans1Button" to="." method="_on_trans1Button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/trans1Button" to="." method="_on_startButton_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
